{
    "name": "InputControlls",
    "maps": [
        {
            "name": "Click",
            "id": "f927692a-b08e-432c-bb7d-44179bac8748",
            "actions": [
                {
                    "name": "Clear",
                    "type": "Button",
                    "id": "1cb1bd0b-8391-404e-a16d-7637154187f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "725d72f5-e96b-4632-ad4c-de530746a95c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "80ec5bfa-cdeb-4dbd-8591-5af8c88a3e43",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d92a03c-6e4b-4c46-a0e9-439363b58f13",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "39042c1e-b3a6-4a42-a8e7-559233a55f8a",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "e432efcf-1c7e-4f8e-b42c-13184fe933bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "6ebcd63b-957d-4668-acfb-9e3a0b2ed0f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeltaX",
                    "type": "Value",
                    "id": "56613f45-b545-4aa4-a587-93f05a4f233a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeltaY",
                    "type": "Value",
                    "id": "75a99cb9-1603-4ef1-b72a-487ade2111ac",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "717e45bc-e16a-4738-aa1c-144167b9fd0e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c392fc43-6e37-483f-9586-7534475dd58c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29c14d37-4090-476b-909a-ed240491b753",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "677d3c4e-a08c-45b6-945e-de5fbe204b58",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}